--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
         font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
         img-src 'self' data: https://www.gstatic.com https://lh3.googleusercontent.com;
-        connect-src 'self' https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.firebaseio.com https://*.firebasedatabase.app https://www.gstatic.com;
-        frame-src https://*.firebaseapp.com https://accounts.google.com;
+        connect-src 'self' https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.firebaseio.com https://*.firebasedatabase.app wss://*.firebasedatabase.app https://www.gstatic.com;
+        frame-src https://*.firebaseapp.com https://accounts.google.com https://*.firebasedatabase.app;
     ">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
