Refactor script.js for improved readability and organization

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎓</text></svg>">
+     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
 </head>
 <body>
 
@@ -227,8 +227,17 @@
                         <span class="mode-label" id="timerMode">FOKUS</span>
                     </div>
 
+                    <div class="focus-mode-selector" style="display: flex; justify-content: center; gap: 10px; margin-bottom: 15px;">
+                        <button id="btnModeStrict" onclick="setFocusType('strict')" class="mode-btn active" title="Timer mati jika pindah tab">
+                            🔒 Ketat
+                        </button>
+                        <button id="btnModeChill" onclick="setFocusType('chill')" class="mode-btn" title="Bebas buka tab lain">
+                            ☕ Santai
+                        </button>
+                    </div>
+
                     <div id="focusModeLockText" style="display:none; text-align:center; margin-bottom: 10px; font-weight: 600; color: #ffeb3b; background: rgba(0,0,0,0.3); padding: 8px; border-radius: 8px;">
-                        ⚠️ JANGAN GANTI TAB! Timer akan dijeda otomatis.
+                        ⚠️ MODE KETAT: Jangan ganti tab!
                     </div>
 
                     <div class="timer-display">
@@ -508,7 +517,7 @@
             </div>
             <div class="modal-foot">
                 <button onclick="deleteNote()" class="btn-text-danger">Hapus</button>
-                <button onclick="saveSubjectNote()" class="btn-primary">Simpan Catatan</button>
+                <button onclick="saveNoteFromModal()" class="btn-primary">Simpan Catatan</button>
             </div>
         </div>
     </div>
