Update progress level display in index.html

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <div class="header-stats-section">
                 <div class="xp-box">
                     <div class="xp-info">
-                        <span class="xp-label">Progress Level</span>
-                        <span id="xpText" class="xp-val">0 / 100 XP</span>
+                    <span id="userRank" class="xp-label" style="color:var(--primary); font-weight:800; text-transform:uppercase; letter-spacing:0.5px;">Murid Baru 🌱</span>
+    <span id="xpText" class="xp-val" style="font-size:0.75rem;">0 / 100 XP</span>
                     </div>
                     <div class="xp-track">
                         <div class="xp-fill" id="xpBarFill" style="width: 0%;">
