--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <title>Student Workspace Pro</title>
     
     <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self' https://*.firebaseio.com https://*.firebaseapp.com https://www.youtube.com;
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://apis.google.com https://*.firebasejs.com https://*.firebaseapp.com https://*.firebasedatabase.app;
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
-        font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
-        img-src 'self' data: https://www.gstatic.com https://lh3.googleusercontent.com https://i.ytimg.com;
-        connect-src 'self' https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.firebaseio.com https://*.firebasedatabase.app wss://*.firebasedatabase.app https://www.gstatic.com;
-        frame-src https://*.firebaseapp.com https://accounts.google.com https://*.firebasedatabase.app https://www.youtube.com;
-    ">
-
+    default-src 'self' https://*.firebaseio.com https://*.firebaseapp.com https://www.youtube.com;
+    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://apis.google.com https://*.firebasejs.com https://*.firebaseapp.com https://*.firebasedatabase.app https://cdn.jsdelivr.net;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
+    font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
+    img-src 'self' data: https://www.gstatic.com https://lh3.googleusercontent.com https://i.ytimg.com;
+    connect-src 'self' https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.firebaseio.com https://*.firebasedatabase.app wss://*.firebasedatabase.app https://www.gstatic.com;
+    frame-src https://*.firebaseapp.com https://accounts.google.com https://*.firebasedatabase.app https://www.youtube.com;
+">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -683,8 +682,8 @@
 
         console.log("Sistem Login & Database Siap!");
     </script>
-    
-    <script src="script.js" defer></script>
-
+   
+    <script src="https://cdn.jsdelivr.net/npm/xlsx-js-style@1.2.0/dist/xlsx.bundle.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
